Fix issue - little-client-involvement element has incorrect styles on smaller screen.

--- a/company_website/static/how_we_work/partials/time_materials_fixed_price_graph.sass
+++ b/company_website/static/how_we_work/partials/time_materials_fixed_price_graph.sass
@@ -307,9 +307,6 @@
                             color: $graph-red-color
                             border-color: $graph-red-color
 
-                            @media only screen and (max-width: 430px)
-                                padding: 5px 0
-
                         .less-control, .low-budget-control, .less-flexibility, .long-meticulous-planning
                             color: $graph-grey-color
                             border-color: $graph-grey-color
@@ -322,6 +319,10 @@
 
                             @media only screen and (max-width: 430px)
                                 padding: 5px 0
+
+                        @media only screen and (min-width: 850px) and (max-width: 928px)
+                            .little-client-involvement
+                                padding: 15px 0
 
                 .col-3.right
                     margin: auto 0
